...
    "More options for %@" : {

    },
    "More sets" : {

    },
    "Move" : {

    },
    "Move %@ down" : {

    },
    "Move %@ up" : {
...
    "Return the key?" : {

    },
    "Review goals" : {

    },
    "Review plan" : {

    },
    "Review workout plan" : {
      "comment" : "A title for a sheet that previews a workout plan for import.",
      "isCommentAutoGenerated" : true
    },
...
    "Share with Health" : {

    },
    "Share with a nearby Fernlet." : {

    },
    "Share with a trainer" : {

    },
    "Share your training" : {

    },
    "Share your vibe" : {
...
